fix:desktop navbar alignment and favicon

--- a/src/App.css
+++ b/src/App.css
@@ -465,13 +465,12 @@ input {
 .menu-popup {
     position: absolute;
     top: 100%;
-    right: 0;
+    left: 0;
     z-index: 999;
     background: rgba(255, 255, 255); 
     border: 2px solid black;
     border-radius: 10px;
-    width: calc(100vw - 20px); 
-    max-width: 400px;
+    width:100%;
     padding: 20px;
     display: flex;
     justify-content: center;
